--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ google-api-python-client==1.7.9
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.0
+gunicorn==19.9.0
 httplib2==0.12.3
 idna==2.8
 importlib-metadata==0.18
